# presentations-search

./: README.md  pyproject.toml
src/presentations_search/: presentation_client.py  presentation_indexer.py  presentation_query.py  presentation_server.py  slide_renderer.py
